test-cases/final-dump/generic_missing_param.wybe
pub constructors(?T) nil | cons(car: ?U, cdr:generic_missing_param(?T))
